[gd_scene load_steps=33 format=3 uid="uid://b7cp1116h8e6q"]

[ext_resource type="Texture2D" uid="uid://48bs33e0lld1" path="res://assets/Mecha-stone Golem 0.1/PNG sheet/Character_sheet.png" id="2_eyl83"]
[ext_resource type="Script" uid="uid://dpn0aswd6wf0k" path="res://Scence/enemy/boss.gd" id="2_o2o5t"]
[ext_resource type="Texture2D" uid="uid://bhqeu5npcb7m5" path="res://assets/Mecha-stone Golem 0.1/weapon PNG/Laser_sheet.png" id="3_ugvon"]
[ext_resource type="Script" uid="uid://ds6hq0mtv0v0c" path="res://Scence/enemy/finite_state_machine.gd" id="5_8e7k1"]
[ext_resource type="Script" uid="uid://botg6btx1vtbh" path="res://Scence/enemy/idle.gd" id="5_p005j"]
[ext_resource type="Script" uid="uid://bcsue1nbrjrcs" path="res://Scence/enemy/follow.gd" id="6_p005j"]
[ext_resource type="Script" uid="uid://b50bvh8h2lymv" path="res://Scence/enemy/melee_attack.gd" id="7_oo31b"]
[ext_resource type="Script" uid="uid://c835tngu3emrh" path="res://Scence/enemy/homing_missile.gd" id="8_lyq1i"]
[ext_resource type="PackedScene" uid="uid://2r8g8au6iqmc" path="res://Scence/enemy/bullet.tscn" id="9_2jpx4"]
[ext_resource type="Script" uid="uid://5dtoaf7sh3h3" path="res://Scence/enemy/laser_bean.gd" id="10_bwfu1"]
[ext_resource type="Script" uid="uid://c41e56e5j05yg" path="res://Scence/enemy/armcr_buff.gd" id="11_i0s8v"]
[ext_resource type="Script" uid="uid://bn2w3x3h28owa" path="res://Scence/enemy/dash.gd" id="11_mk0ry"]
[ext_resource type="Script" uid="uid://b4rctf7r125m4" path="res://Scence/enemy/death.gd" id="13_i0s8v"]
[ext_resource type="PackedScene" uid="uid://cqlwr8lk2583g" path="res://UI/game_end_screen.tscn" id="14_oxtqr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oxtqr"]
size = Vector2(249, 15)

[sub_resource type="Gradient" id="Gradient_i0s8v"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_i0s8v"]
gradient = SubResource("Gradient_i0s8v")
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i0s8v"]
size = Vector2(49, 44)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ugvon"]
radius = 12.0
height = 46.0

[sub_resource type="Animation" id="Animation_o2o5t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/PointLight2D2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_mk0ry"]
resource_name = "armor_buff"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65, 66, 67, 68, 69]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_oo31b"]
resource_name = "block"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 36, 37]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_bwfu1"]
resource_name = "death"
length = 1.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_8e7k1"]
resource_name = "glowing"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_msg4t"]
resource_name = "idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ugvon"]
resource_name = "laser"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FiniteStateMachine/LaserBean")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.45),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"set_target"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/PointLight2D2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 0.654852),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_2jpx4"]
resource_name = "laser_cast"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54, 55, 56]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lyq1i"]
resource_name = "melee_attack"
length = 0.7
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_p005j"]
resource_name = "range_attack"
length = 0.9
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o2o5t"]
_data = {
&"RESET": SubResource("Animation_o2o5t"),
&"armor_buff": SubResource("Animation_mk0ry"),
&"block": SubResource("Animation_oo31b"),
&"death": SubResource("Animation_bwfu1"),
&"glowing": SubResource("Animation_8e7k1"),
&"idle": SubResource("Animation_msg4t"),
&"laser": SubResource("Animation_ugvon"),
&"laser_cast": SubResource("Animation_2jpx4"),
&"melee_attack": SubResource("Animation_lyq1i"),
&"range_attack": SubResource("Animation_p005j")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ugvon"]
radius = 100.0

[sub_resource type="GradientTexture2D" id="GradientTexture2D_oxtqr"]
gradient = SubResource("Gradient_i0s8v")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[node name="Boss" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 0
up_direction = Vector2(-0.0449545, -0.998989)
script = ExtResource("2_o2o5t")
damage = 20
health = 200

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(2, -17)
collision_layer = 0
collision_mask = 8
monitoring = false
monitorable = false

[node name="LaserBeanCollisionShape" type="CollisionShape2D" parent="HitBox"]
position = Vector2(124, 0)
shape = SubResource("RectangleShape2D_oxtqr")
debug_color = Color(1, 0.264753, 0.445802, 0.42)

[node name="PointLight2D2" type="PointLight2D" parent="HitBox"]
position = Vector2(135.688, 0)
scale = Vector2(1.16992, 0.078125)
color = Color(0.0735702, 0.444994, 0.744392, 1)
energy = 5.0
texture = SubResource("GradientTexture2D_i0s8v")
texture_scale = 3.0

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-1, -3)
shape = SubResource("RectangleShape2D_i0s8v")
debug_color = Color(0.632058, 0.817613, 0.434304, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_eyl83")
hframes = 10
vframes = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_ugvon")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_o2o5t")
}

[node name="pivot" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(2, -17)

[node name="Sprite2D" type="Sprite2D" parent="pivot"]
position = Vector2(98.2771, 17.4243)
texture = ExtResource("3_ugvon")
vframes = 15

[node name="PlayerDectetion" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="PlayerDectetionCollisionShape2D" type="CollisionShape2D" parent="PlayerDectetion"]
shape = SubResource("CircleShape2D_ugvon")

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameEndScreen" parent="UI" instance=ExtResource("14_oxtqr")]

[node name="BossDebug" type="Label" parent="UI"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -17.0
offset_top = 15.0
offset_right = 17.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 10
text = "debug"
horizontal_alignment = 1

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("5_8e7k1")

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("5_p005j")

[node name="Follow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("6_p005j")

[node name="MeleeAttack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("7_oo31b")

[node name="HomingMissile" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("8_lyq1i")
bullet_node = ExtResource("9_2jpx4")

[node name="LaserBean" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("10_bwfu1")

[node name="ArmcrBuff" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("11_i0s8v")

[node name="Dash" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("11_mk0ry")

[node name="Death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("13_i0s8v")

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
scale = Vector2(1, 0.75)
color = Color(0.0735702, 0.444994, 0.744392, 1)
energy = 2.0
texture = SubResource("GradientTexture2D_oxtqr")
texture_scale = 3.0

[connection signal="body_entered" from="PlayerDectetion" to="FiniteStateMachine/Idle" method="_on_player_dectetion_body_entered"]
